Fixed iOS invisible mobile links

--- a/styles/scss/_single_post.scss
+++ b/styles/scss/_single_post.scss
@@ -22,6 +22,7 @@
     font-weight: $medium-text-weight;
     color: $secondary-accent;
     margin: 0.5rem;
+    text-align: center;
   }
 
   &-read-time {
